# klaus-bot

./: .env.example  .gitignore  Procfile  README.md  config.py  database.py  embed_builder.py  helpers.py  klaus.py  logger_config.py  profile_generator.py  pyproject.toml  requirements.txt  send_commands.py  ship_generator.py  theme_art.py
cogs/: __init__.py  automod.py  diversao.py  diversao_extra.py  economia.py  eventos.py  giveaway.py  moderacao.py  reaction_roles.py  social.py  tickets.py  utilidades.py  utilidades_extra.py
tests/: test_config.py  test_helpers.py
